--- a/src/_includes/partials/components/dim-weight.njk
+++ b/src/_includes/partials/components/dim-weight.njk
@@ -18,7 +18,7 @@
             </div><span class="UOM__length"></span>
     				<label class="inputs__dim" for="height">Height</label>
     				<div class="input_background inputs__dim">
-              <input type="number" id="height" class="dim_input validity_margin" title="positive numbers only" type="text" value="300" pattern="^[+]?([.]\d+|\d+[.]?\d*)$"  autocomplete="off" data-lpignore="true" >
+              <input type="decimal" id="height" class="dim_input validity_margin" title="positive numbers only" type="text" value="300" pattern="^[+]?([.]\d+|\d+[.]?\d*)$"  autocomplete="off" data-lpignore="true" >
             </div><span class="UOM__length"></span>
         </div>
         <div class="viewPort">
@@ -35,7 +35,7 @@
           <h3 class="pad-bottom-700">Step 2: Enter Weight</h3>
           <label class=" inputs__dim" for="weight">Weight</label>
           <div class="input_background inputs__dim">
-            <input type="number" id="weight" class="dim_input validity_margin" title="positive numbers only" type="text" value="400" pattern="^[+]?([.]\d+|\d+[.]?\d*)$"  autocomplete="off" data-lpignore="true" >
+            <input inputmode="decimal" pattern="[0-9]*" type="text" id="weight" class="dim_input validity_margin" title="positive numbers only" type="text" value="400" pattern="^[+]?([.]\d+|\d+[.]?\d*)$"  autocomplete="off" data-lpignore="true" >
           </div><span class="UOM__weight"></span>
         </div>
         <div class="balanced-view dim">
