adding uom to DIM weight calcuiation

--- a/src/_includes/partials/components/dim-weight.njk
+++ b/src/_includes/partials/components/dim-weight.njk
@@ -70,7 +70,9 @@
             <p class="calcs__inputs">Length * Width * Height</p> <p class="calcs__result">Volume</p> 
             <p class="calcs__inputs calcs__volume"></p><p class="calcs__result calcs__v-res"></p>
             <p class="calcs__inputs">Volume / Dim Factor </p><p class="calcs__result">Dimentional weight</p>
-            <p class="calcs__inputs calcs__dim-weight"></p><p class="calcs__result calcs__dim-res"></p>
+            <p class="calcs__inputs calcs__dim-weight"></p><p>
+              <span class="calcs__result calcs__dim-res"></span><span class="UOM__weight"></span>
+            </p>
             <p class="calcs__inputs">Billing Weight</p><p>
               <span class="calcs__result calcs__billing"></span><span class="UOM__weight"></span>
             </p>
