fixing bug in weight input

--- a/src/_includes/partials/components/dim-weight.njk
+++ b/src/_includes/partials/components/dim-weight.njk
@@ -35,7 +35,7 @@
           <h3 class="pad-bottom-700">Step 2: Enter Weight</h3>
           <label class=" inputs__dim" for="weight">Weight</label>
           <div class="input_background inputs__dim">
-            <input inputmode="decimal" pattern="[0-9]*" type="text" id="weight" class="dim_input validity_margin" title="positive numbers only" type="text" value="400" pattern="([1-9]\d*(\.\d*[1-9])?|0\.\d*[1-9]+)|\d+(\.\d*[1-9])?"  autocomplete="off" data-lpignore="true" >
+            <input inputmode="decimal" type="text" id="weight" class="dim_input validity_margin" title="positive numbers only" type="text" value="400" pattern="([1-9]\d*(\.\d*[1-9])?|0\.\d*[1-9]+)|\d+(\.\d*[1-9])?"  autocomplete="off" data-lpignore="true" >
           </div><span class="UOM__weight"></span>
         </div>
         <div class="balanced-view dim">
