meta desc updates and added label for better SEO

--- a/src/_includes/partials/components/dim-weight.njk
+++ b/src/_includes/partials/components/dim-weight.njk
@@ -48,6 +48,8 @@
         </div>
         <div class="range">
           <h3  class="pad-bottom-700 factors">Step 3: Select a Dimensional Weight Factor </h3>
+          
+          <label for="factors">⇐ rate factor slider ⇒</label>
           <input class="dim_input range__slider" type="range" name="factors" id="factors" value="5000"min="3000" max="9000" step="1000">
           <div class="factorFacts">
             <section class="factor__headings"><h4>cm3/kg</h4><h4>kg/m3</h4><h4>in3/lb</h4><h4>lb/ft3</h4></section>
